error message updated

--- a/index.html
+++ b/index.html
@@ -12,12 +12,13 @@
 <body>
     <div class="card">
         <div class="search">
+            
             <input type="text" placeholder="Enter a City name" spellcheck="false">
             <button class="abc"><img src="images/search.png" alt=""></button>
         </div>
         <div>
             <div class="error">
-                <p>Invalid name</p>
+                <p>INVALID NAME</p>
             </div>
         </div>
         <div class="weather">
